Fix: wrong name in package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "usupport-website-ui",
+  "name": "usupport-client-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
