--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-router-dom": "^6.4.1",
+    "react-share": "^4.4.1",
     "usupport-components-library": "file:USupport-components-library"
   },
   "devDependencies": {
