--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.13.4",
     "aos": "^2.3.4",
     "axios": "^1.1.2",
     "classnames": "^2.3.2",
@@ -19,6 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.4.1",
     "usupport-components-library": "file:USupport-components-library"
   },
