--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.1.2",
     "classnames": "^2.3.2",
     "i18next": "^21.10.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
