Add: s3 bucket url to the .env files

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 VITE_API_ENDPOINT=http://localhost:3000/api
 VITE_CMS_HOST=http://localhost:1337
 VITE_CMS_API_URL=http://localhost:1337/api
+VITE_AMAZON_S3_BUCKET=https://usupport-staging.s3.eu-central-1.amazonaws.com
