--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,4 @@
 VITE_API_ENDPOINT=https://staging.7digit.io/api
 VITE_CMS_API_URL=https://staging.7digit.io/cms/api
 VITE_CMS_HOST=https://staging.7digit.io/cms
+VITE_AMAZON_S3_BUCKET=https://usupport-staging.s3.eu-central-1.amazonaws.com
