--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 VITE_API_ENDPOINT=
 VITE_CMS_HOST=
 VITE_CMS_API_URL=
-VITE_AMAZON_S3_BUCKET=https://usupport-staging.s3.eu-central-1.amazonaws.com
+VITE_AMAZON_S3_BUCKET=https://usupport-production.s3.eu-central-1.amazonaws.com
+VITE_WEBSITE_URL=https://usupport.online
