--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.4.1",
     "react-share": "^4.4.1",
+    "react-toastify": "^9.1.1",
     "usupport-components-library": "file:USupport-components-library"
   },
   "devDependencies": {
