--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ VITE_API_ENDPOINT=http://localhost:3000/api
 VITE_CMS_API_URL=http://localhost:3009/api
 VITE_AMAZON_S3_BUCKET=https://usupport-staging.s3.eu-central-1.amazonaws.com
 VITE_WEBSITE_URL=https://staging.usupport.online
+VITE_SOCKET_IO_URL=http://localhost:3000
