--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.4.1",
     "react-share": "^4.4.1",
     "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.5.4",
     "usupport-components-library": "file:USupport-components-library"
   },
   "devDependencies": {
