--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-share": "^4.4.1",
     "react-toastify": "^9.1.1",
     "socket.io-client": "^4.5.4",
+    "twilio-video": "^2.18.1",
     "usupport-components-library": "file:USupport-components-library"
   },
   "devDependencies": {
