--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.3",
+    "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-query": "^4.13.4",
     "@tanstack/react-query-devtools": "^4.14.1",
     "aos": "^2.3.4",
