--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@ VITE_API_ENDPOINT=
 VITE_CMS_API_URL=
 VITE_AMAZON_S3_BUCKET=https://usupport-production.s3.eu-central-1.amazonaws.com
 VITE_WEBSITE_URL=https://usupport.online
+VITE_STRIPE_PUBLIC_KEY=
