--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "staging": "vite build --mode staging",
     "build": "vite build",
     "preview": "vite preview",
@@ -18,10 +18,12 @@
     "@tanstack/react-query-devtools": "^4.14.1",
     "aos": "^2.3.4",
     "axios": "^1.1.2",
+    "chart.js": "^4.2.1",
     "classnames": "^2.3.2",
     "i18next": "^21.10.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-i18next": "^11.18.6",
