--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-i18next": "^11.18.6",
+    "react-idle-timer": "^5.6.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.4.1",
