--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-idle-timer": "^5.6.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.3",
+    "react-outside-click-handler": "^1.3.0",
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.4.1",
     "react-share": "^4.4.1",
