--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,4 @@ VITE_CMS_API_URL=
 VITE_AMAZON_S3_BUCKET=https://usupport-production.s3.eu-central-1.amazonaws.com
 VITE_WEBSITE_URL=https://usupport.online
 VITE_STRIPE_PUBLIC_KEY=
+VITE_GIT_BOOK_URL="https://7digit-1.gitbook.io/usupport/y0yJCW2nZ6Sb52p4arjv"
