--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,5 @@ VITE_AMAZON_S3_BUCKET=https://usupport-production.s3.eu-central-1.amazonaws.com
 VITE_WEBSITE_URL=https://usupport.online
 VITE_SOCKET_IO_URL=wss://usupport.online
 VITE_STRIPE_PUBLIC_KEY=
+VITE_RECAPTCHA_SITE_KEY=6LeXgo4mAAAAAGZE3yzXq2datUkSUu2ftwTPj27K
 VITE_GIT_BOOK_URL=https://7digit-1.gitbook.io/usupport/y0yJCW2nZ6Sb52p4arjv
