--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 VITE_HOST=https://usupport.online/client
 VITE_API_ENDPOINT=https://usupport.online/api
 VITE_CMS_API_URL=https://usupport.online/cms/api
-VITE_AMAZON_S3_BUCKET=https://usupport-production.s3.eu-central-1.amazonaws.com
+VITE_AMAZON_S3_BUCKET=https://usupport-production.s3.eu-west-1.amazonaws.com
 VITE_WEBSITE_URL=https://usupport.online
 VITE_SOCKET_IO_URL=wss://usupport.online
 VITE_STRIPE_PUBLIC_KEY=
