--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "classnames": "^2.3.2",
+    "html2pdf.js": "^0.10.3",
     "i18next": "^21.10.0",
     "joi": "^17.9.2",
     "jwt-decode": "^3.1.2",
+    "marked": "^15.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
