--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint-fix": "eslint --ext .js,.jsx src --fix"
   },
   "dependencies": {
+    "@jitsi/react-sdk": "^1.4.4",
     "@react-pdf/renderer": "^3.1.11",
     "@stripe/react-stripe-js": "^1.16.3",
     "@stripe/stripe-js": "^1.46.0",
