Add: Wysa for CY

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,11 @@
-VITE_API_ENDPOINT=https://staging.usupport.online/api
+# production
+VITE_API_ENDPOINT=https://usupport.online/api
+VITE_CMS_API_URL=https://usupport.online/cms/api
+
+# local and staging
 # VITE_API_ENDPOINT=http://localhost:3000/api
-VITE_CMS_API_URL=https://staging.usupport.online/cms/api
+# VITE_API_ENDPOINT=https://staging.usupport.online/api
+# VITE_CMS_API_URL=https://staging.usupport.online/cms/api
 VITE_AMAZON_S3_BUCKET=https://usupport-staging.s3.eu-central-1.amazonaws.com
 VITE_WEBSITE_URL=https://staging.usupport.online
 VITE_SOCKET_IO_URL=ws://staging.usupport.online
